--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,144 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  min-height: 100vh;
+  background-color: #282c34;
   font-size: calc(10px + 2vmin);
   color: white;
+  width: 100vw;
 }
 
-.App-link {
-  color: #61dafb;
+.board {
+  margin: 20px 0;
 }
 
-@keyframes App-logo-spin {
+.row {
+  display: flex;
+  justify-content: center;
+  margin: 5px 0;
+  gap: 7px;
+}
+
+.cell {
+  border: 2px solid #d3d3d3;
+  height: 50px;
+  width: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 24px;
+  text-transform: uppercase;
+}
+
+.correct {
+  background-color: green;
+}
+
+.misplaced {
+  background-color: rgba(255, 255, 0, 0.516);
+}
+
+.incorrect {
+  background-color: grey;
+}
+
+.keyboard {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
+
+.keyboard-row {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
+button {
+  background-color: #444;
+  color: white;
+  border: none;
+  width: 4vw;
+  height: 4vw;
+  font-size: 1rem;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+button:active {
+  background-color: #666;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.7);
+  opacity: 0;
+  animation: fadeIn 1s forwards;
+  z-index: 1000;
+}
+
+.overlay-content {
+  margin-top: 20px;
+}
+
+.new-game-button {
+  background-color: #61dafb;
+  color: black;
+  padding: 20px 40px;
+  font-size: 24px;
+  border: none;
+  cursor: pointer;
+  border-radius: 10px;
+  width: auto;
+  height: auto;
+  opacity: 0;
+  animation: slideIn 1s 0.5s forwards;
+}
+
+.new-game-button:hover {
+  background-color: #21a1f1;
+}
+
+@media (max-width: 1000px) {
+  button {
+    width: 8vw;
+    height: 8vw;
+    font-size: 0.9rem;
+  }
+}
+
+@keyframes fadeIn {
   from {
-    transform: rotate(0deg);
+    opacity: 0;
   }
   to {
-    transform: rotate(360deg);
+    opacity: 1;
+  }
+}
+
+@keyframes slideIn {
+  from {
+    transform: translateY(50px);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
   }
 }
